--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <img src="logo.png" alt="PRIME009 Logo" class="logo">
     <h1 class="glow">PRIME009 LITE</h1>
     <div class="card">
+      <p>💎 CPU TRBBO MAX</p>
+      <P>👑 GPU TURBO MAX</p>
       <p>🔥 FPS Boost up to 1000+</p>
       <p>⚙️ Best optimization ever </p>
       <p>🎯 Better Headshots | Secret Optimizations </p>
@@ -78,3 +80,4 @@
   </div>
 </body>
 </html>
+
