--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <img src="logo.png" alt="PRIME009 Logo" class="logo">
     <h1 class="glow">PRIME009 LITE</h1>
     <div class="card">
-      <p>💎 CPU TRBBO MAX</p>
-      <P>👑 GPU TURBO MAX</p>
-      <p>🔥 FPS Boost up to 1000+</p>
+      <p>💎 CPU TRBBO MAX-V4</p>
+      <P>👑 GPU TURBO MAX-V4</p>
+      <p>🔥 FPS Boost up to 240+</p>
       <p>⚙️ Best optimization ever </p>
       <p>🎯 Better Headshots | Secret Optimizations </p>
       <p>🎮 Click below to join our exclusive Discord server!</p>
@@ -80,4 +80,5 @@
   </div>
 </body>
 </html>
+
 
