--- a/index.html
+++ b/index.html
@@ -1,262 +1,44 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PRIME009 LITE</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-  <style>
-    /* Page reset */
-    * { box-sizing: border-box; }
-    html,body { height:100%; margin:0; font-family:'Orbitron', sans-serif; background: #000; overflow-x:hidden; }
-
-    /* -- Animated background layers -- */
-    .bg {
-      position:fixed;
-      inset:0;
-      z-index:-3;
-      overflow:hidden;
-      pointer-events:none;
-      background: radial-gradient(ellipse at 20% 20%, rgba(6,18,30,0.6), transparent 25%),
-                  radial-gradient(ellipse at 80% 70%, rgba(2,12,20,0.6), transparent 20%);
-    }
-
-    /* moving cloud / nebula layers (blurred radial gradients) */
-    .nebula {
-      position:absolute; inset:-10%  -10%;
-      filter: blur(60px) saturate(140%);
-      opacity:0.7;
-      transform:translate3d(0,0,0);
-      mix-blend-mode:screen;
-    }
-    .nebula.one {
-      background: radial-gradient(circle at 30% 40%, rgba(0,220,255,0.18), transparent 25%), radial-gradient(circle at 60% 60%, rgba(0,100,255,0.06), transparent 20%);
-      animation: float1 28s linear infinite;
-    }
-    .nebula.two {
-      background: radial-gradient(circle at 70% 30%, rgba(0,200,255,0.12), transparent 20%), radial-gradient(circle at 40% 70%, rgba(0,120,255,0.05), transparent 18%);
-      animation: float2 34s linear infinite reverse;
-      opacity:0.6;
-    }
-
-    @keyframes float1 {
-      0% { transform: translate3d(-4%, -2%, 0) scale(1); }
-      50% { transform: translate3d(6%, 3%, 0) scale(1.03); }
-      100% { transform: translate3d(-4%, -2%, 0) scale(1); }
-    }
-    @keyframes float2 {
-      0% { transform: translate3d(6%, 2%, 0) scale(1.02); }
-      50% { transform: translate3d(-5%, -4%, 0) scale(0.98); }
-      100% { transform: translate3d(6%, 2%, 0) scale(1.02); }
-    }
-
-    /* Particle canvas sits above nebula but below content */
-    #particles {
-      position: absolute;
-      inset:0;
-      z-index:-2;
-      opacity:0.95;
-      mix-blend-mode: screen;
-      pointer-events:none;
-    }
-
-    /* Container & layout */
-    .container {
-      position:relative;
-      z-index:1;
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      padding: 60px 20px;
-      text-align:center;
-      color: #e6ffff;
-    }
-
-    .logo {
-      width: 220px;
-      height: auto;
-      margin-bottom: 18px;
-      transition: transform 0.15s ease-out;
-      will-change: transform;
-      filter: drop-shadow(0 0 18px rgba(0,220,255,0.35));
-    }
-
-    h1 {
-      margin: 0;
-      font-size: clamp(28px, 6vw, 64px);
-      color: #8ff7ff;
-      letter-spacing: 6px;
-      text-shadow:
-        0 0 6px rgba(0,220,255,0.18),
-        0 0 18px rgba(0,220,255,0.12),
-        0 0 40px rgba(0,120,255,0.06);
-    }
-
-    /* card style (keeps your original content but updated colors) */
-    .card {
-      margin-top: 26px;
-      background: rgba(0, 255, 255, 0.03);
-      border: 1px solid rgba(0,255,255,0.12);
-      border-radius: 12px;
-      padding: 20px;
-      max-width:640px;
-      width: calc(100% - 40px);
-      color: #cfeff3;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.6), inset 0 0 80px rgba(0,220,255,0.01);
-      animation: subtleGlow 3s infinite alternate;
-    }
-    @keyframes subtleGlow {
-      0% { box-shadow: 0 6px 20px rgba(0,255,255,0.04); transform: translateY(0) }
-      100% { box-shadow: 0 18px 60px rgba(0,255,255,0.06); transform: translateY(-3px) }
-    }
-
-    .card p { margin:8px 0; font-size: 16px; }
-
-    .btn {
-      background: linear-gradient(90deg, rgba(0,220,255,1), rgba(0,160,255,1));
-      color: #00131a;
-      padding: 12px 26px;
-      border-radius: 10px;
-      border: none;
-      font-size: 18px;
-      text-decoration: none;
-      display:inline-block;
-      margin-top: 14px;
-      box-shadow: 0 8px 30px rgba(0,160,255,0.12);
-      transition: transform .14s ease, box-shadow .14s ease;
-    }
-    .btn:hover { transform: translateY(-3px); box-shadow: 0 18px 40px rgba(0,160,255,0.22); }
-
-    footer { margin-top: 44px; font-size:14px; color: #9fbfc6; opacity:0.85; }
-
-    /* responsive tweaks */
-    @media (max-width:520px) {
-      .logo { width: 160px; }
-      .card { padding:14px; }
-    }
-  </style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PRIME009 — Gaming Preview</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Background -->
-  <div class="bg" aria-hidden="true">
-    <div class="nebula one"></div>
-    <div class="nebula two"></div>
-    <canvas id="particles"></canvas>
-  </div>
+  <header class="site-header">
+    <div class="logo">PRIME009</div>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Features</a>
+      <a href="#">Download</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
-  <!-- Page content -->
-  <div class="container">
-    <!-- Logo: keep logo.png in same folder -->
-    <img src="logo.png" alt="PRIME009 Logo" class="logo" id="logo">
-    <h1 id="title">PRIME009 LITE</h1>
+  <main class="hero">
+    <h1>PRIME009</h1>
+    <p class="lead">A compact, responsive landing page with three preview thumbnails — red glow theme for PRIME009.</p>
 
-    <div class="card">
-      <p>💎 CPU TRBBO MAX-V4</p>
-      <p>👑 GPU TURBO MAX-V4</p>
-      <p>🔥 FPS Boost up to 240+</p>
-      <p>⚙️ Best optimization ever</p>
-      <p>🎯 Better Headshots | Secret Optimizations</p>
-      <p>🎮 Click below to join our exclusive Discord server!</p>
-      <a href="https://discord.gg/AXFWmvDa" target="_blank" rel="noopener" class="btn">GET ACCESS</a>
-    </div>
+    <section class="previews">
+      <a class="card" href="#">
+        <img src="preview1.png" alt="Preview 1">
+        <div class="card-caption">Preview 1 — Home</div>
+      </a>
+      <a class="card" href="#">
+        <img src="preview2.png" alt="Preview 2">
+        <div class="card-caption">Preview 2 — Features</div>
+      </a>
+      <a class="card" href="#">
+        <img src="preview3.png" alt="Preview 3">
+        <div class="card-caption">Download</div>
+      </a>
+    </section>
 
-    <footer>&copy; 2025 PRIME009. All rights reserved.</footer>
-  </div>
-
-  <!-- Scripts: particles + slight parallax based on mouse -->
-  <script>
-    /* -------- Particles (light, performant) -------- */
-    const canvas = document.getElementById('particles');
-    const ctx = canvas.getContext('2d');
-    let DPR = window.devicePixelRatio || 1;
-
-    function resize() {
-      canvas.width = innerWidth * DPR;
-      canvas.height = innerHeight * DPR;
-      canvas.style.width = innerWidth + 'px';
-      canvas.style.height = innerHeight + 'px';
-      ctx.scale(DPR, DPR);
-    }
-    window.addEventListener('resize', () => {
-      DPR = window.devicePixelRatio || 1;
-      resize();
-    });
-    resize();
-
-    // particles array
-    const particles = [];
-    const PARTICLE_COUNT = Math.max(40, Math.floor((innerWidth * innerHeight) / 9000)); // adaptive
-
-    function rand(min, max){ return Math.random() * (max - min) + min; }
-
-    for (let i=0;i<PARTICLE_COUNT;i++){
-      particles.push({
-        x: rand(0, innerWidth),
-        y: rand(0, innerHeight),
-        r: rand(0.6, 2.6),
-        vx: rand(-0.2, 0.2),
-        vy: rand(-0.07, 0.07),
-        alpha: rand(0.15, 0.95)
-      });
-    }
-
-    function draw() {
-      ctx.clearRect(0,0, canvas.width, canvas.height);
-      // subtle background tint (kept transparent to let nebula show)
-      particles.forEach(p => {
-        // twinkle
-        p.alpha += Math.sin(Date.now() * 0.001 + p.x * 0.01) * 0.002;
-        if (p.alpha > 1) p.alpha = 1;
-        if (p.alpha < 0.05) p.alpha = 0.05;
-
-        ctx.beginPath();
-        ctx.globalAlpha = p.alpha * 0.9;
-        // soft glow for each particle
-        const grad = ctx.createRadialGradient(p.x, p.y, 0, p.x, p.y, p.r * 6);
-        grad.addColorStop(0, 'rgba(180,255,255,0.95)');
-        grad.addColorStop(0.3, 'rgba(100,220,255,0.22)');
-        grad.addColorStop(1, 'rgba(0,0,0,0)');
-        ctx.fillStyle = grad;
-        ctx.arc(p.x, p.y, p.r * 6, 0, Math.PI * 2);
-        ctx.fill();
-        ctx.globalAlpha = 1;
-
-        p.x += p.vx;
-        p.y += p.vy;
-
-        if (p.x < -10) p.x = innerWidth + 10;
-        if (p.x > innerWidth + 10) p.x = -10;
-        if (p.y < -10) p.y = innerHeight + 10;
-        if (p.y > innerHeight + 10) p.y = -10;
-      });
-
-      requestAnimationFrame(draw);
-    }
-    draw();
-
-    /* -------- Parallax: logo & title follow mouse slightly -------- */
-    const logo = document.getElementById('logo');
-    const title = document.getElementById('title');
-    const root = document.documentElement;
-
-    let mouseX = 0, mouseY = 0;
-    window.addEventListener('mousemove', (e) => {
-      mouseX = (e.clientX / innerWidth) - 0.5;
-      mouseY = (e.clientY / innerHeight) - 0.5;
-      // subtle transform
-      logo.style.transform = `translate3d(${mouseX * 8}px, ${mouseY * 6}px, 0)`;
-      title.style.transform = `translate3d(${mouseX * 4}px, ${mouseY * 3}px, 0)`;
-    });
-
-    // reduce motion for users who prefer reduced motion
-    const mq = window.matchMedia('(prefers-reduced-motion: reduce)');
-    if (mq.matches) {
-      // stop animations if user prefers reduced motion
-      document.querySelectorAll('.nebula').forEach(n => n.style.animation = 'none');
-      window.removeEventListener('mousemove', () => {});
-    }
-  </script>
+    <footer class="foot">
+      <small>Made by <strong>PRIME009</strong></small>
+    </footer>
+  </main>
 </body>
 </html>
